--- a/counter/index.html
+++ b/counter/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="counter">
-            <h2>Bern</h2>
+            <h2>Counter 1</h2>
             <div class="display" id="counter1">0</div>
             <div class="buttons">
                 <button onclick="increment(1)">+</button>
